# figmaqml

./: CMakeLists.txt  Main.qml  README.md  figmaapimanager.cpp  figmaapimanager.hpp  figmadocument.cpp  figmadocument.hpp  figmanode.cpp  figmanode.hpp  main.cpp
